--- a/index.html
+++ b/index.html
@@ -449,7 +449,15 @@
                             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Unesite vašu email adresu:">
                          </div>
 
-
+                         <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Odakle ste?
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item">Beograd</a>
+                            <a class="dropdown-item">Novi Sad</a>
+                            <a class="dropdown-item">Kragujevac</a>
+                            <a class="dropdown-item">Subotica</a>
+                            </div>
                          
                          <div class="form-group">
                             <input type="date" class="form-control" id="exampleFormControlInput1" placeholder="Datum rodjenja">
