--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
         <div class="container">
             <div class="row align-items-center text-center text-md-left">
                 <div class="col">
-                    <p class="mb-0 small">&copy; <script>document.write(new Date().getFullYear())</script>, <p>Mamadoo</p> 
+                    <p class="mb-0 small">&copy; <script>document.write(new Date().getFullYear())</script>, <p>Mamadoo, Vuka Karadžića 16, Mladenovac</p> 
                 </div>
             </div>
         </div>
