--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <!-- Bootstrap + Pigga main styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/pigga.css">
+    <link rel="stylesheet" href="assets/css/jquery.shCircleLoader.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+
+    
+
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
@@ -317,7 +322,7 @@
                                 </div>
                             </div>
                         </div> -->
-                    </div>
+                    <!-- </div> -->
                 </div>
             </div>                  
         </div>
@@ -383,7 +388,7 @@
             <h3 class="section-title mb-5 text-center">Utisci naših mušterija su nam najbitniji</h3>
 
             <div class="row">
-                <div class="col-md-4 my-3 my-md-0">
+                <div class="col-md-4 my-3 my-md-0 current">
                     <div class="card">
                         <div class="card-body">
                             <div class="media align-items-center mb-3">
@@ -436,7 +441,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col">
-                    <form class="container">
+                    <form class="container" id="forma">
                         <div class="alert alert-info alert-dismissible fade show" role="alert">
                             Registrujte se i dobijte kupone za svaku kupovinu u našem ambijentu.
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -487,7 +492,7 @@
                               Žensko
                             </label>
                           </div>
-                          <div class="alert alert-danger alert-dismissible fade show sakrij" role="alert">
+                          <div id="pol-radio-obavestenje" class="alert alert-danger alert-dismissible fade show sakrij" role="alert">
                             Morate odabrati pol!
                             <!-- <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                <span aria-hidden="true">&times;</span>
@@ -500,7 +505,7 @@
                             </label>
                           </div>
                           <div class="alert alert-danger alert-dismissible fade show sakrij" role="alert" id="check-obavestenje">
-                            Morate prihvatiti uslove korišćenja?
+                            Morate prihvatiti uslove korišćenja!
                             <!-- <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                <span aria-hidden="true">&times;</span>
                             </button> -->
@@ -510,6 +515,8 @@
                          <div id="uspesno"class="alert alert-success alert-dismissible fade show sakrij" role="alert">
                             Uspešno ste se prijavili. Hvala!
                          </div>
+
+                         <div id="loading-plugin" class="sakrij"></div>
 
                          <!-- <div class="form-group">
                             <input type="date" class="form-control" id="exampleFormControlInput1" placeholder="Datum rodjenja">
@@ -579,6 +586,13 @@
 
     <!-- moj java skript -->
     <script src="assets/js/script.js"></script>
+
+    <!-- jquery plugin za ucitavanje koriscen u liniji 519 -->
+    <script src="/assets/js/jquery.shCircleLoader-min.js"></script>
+    <script src="/assets/js/jquery.shCircleLoader.js"></script>
+    <script src="/assets/js/loading-circle.js"></script>
+    
+    <script src="/assets/js/hover-backgroundcolor.js"></script>
 
 </body>
 </html>
