--- a/index.html
+++ b/index.html
@@ -588,11 +588,11 @@
     <script src="assets/js/script.js"></script>
 
     <!-- jquery plugin za ucitavanje koriscen u liniji 519 -->
-    <script src="/assets/js/jquery.shCircleLoader-min.js"></script>
-    <script src="/assets/js/jquery.shCircleLoader.js"></script>
-    <script src="/assets/js/loading-circle.js"></script>
+    <script src="assets/js/jquery.shCircleLoader-min.js"></script>
+    <script src="assets/js/jquery.shCircleLoader.js"></script>
+    <script src="assets/js/loading-circle.js"></script>
     
-    <script src="/assets/js/hover-backgroundcolor.js"></script>
+    <script src="assets/js/hover-backgroundcolor.js"></script>
 
 </body>
 </html>
