--- a/about.html
+++ b/about.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="sr-Latn-RS">
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Pigga landing page.">
     <meta name="author" content="Devcrud">
-    <link rel="icon" type="image/x-icon" href="/assets/imgs/logo.ico">
-    <title>Pizzeria Mamadoo</title>
+    <link rel="icon" type="image/x-icon" href="assets/imgs/logo.ico">
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Pigga main styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/pigga.css">
+    <link rel="stylesheet" href="assets/css/jquery.shCircleLoader.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <title>Pizzeria Mamadoo</title>
+    <meta name="description" content="Pizzeria Mamadoo postoji nudi ukusne pice i rol sendviče. Kvalitetu naše usluge svedoče brojne mušterije pozamašnog broja na dnevnom nivou. Od capriciosse do burger rol-sendviča">
+    <meta name="keywords" content="Pice, rol-sendvič, picerija, usluge, capriciossa, burger rol, kvalitet">
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
